kuberentes/kubernetes-documents/Mesh Service/latest_istio/매/2. ns-label.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: default                       # namespace name
  labels:
    istio-injection: enabled      # Automatically add a sidecar.
