kuberentes/kubernetes-documents/Mesh Service/latest_istio/매/7. virtual-destination.yaml
# # Istio DestinationRule for httpd service
# apiVersion: networking.istio.io/v1alpha3
# kind: DestinationRule
# metadata:
#   name: httpd
#   namespace: web
# spec:
#   host: httpd
#   subsets:
#   - name: v1
#     labels:
#       version: v1
#   - name: v2
#     labels:
#       version: v2
# ---
# Istio DestinationRule for nginx service
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nginx
  namespace: default
spec:
  host: nginx
  subsets:
  - name: v1
    labels:
      version: '0.1'
